==> GitGriever/Game/Keil_v5/ARM/Boards/Luminary/ek-lm3s2110/RL/CAN/CAN_Ex2/CAN_LM3Sxxxx.c <==
#include <RTL.h>                      /* RTX kernel functions & defines      */
#include <RTX_CAN.h>                  /* CAN Generic functions & defines     */
#include <LM3Sxxxx.h>                 /* LM3Sxxxx library definitions        */
#define CAN_CLOCK         8000000

static CAN_ERROR CAN_hw_set_baudrate (U32 ctrl, U32 baudrate)  {
  U32 CANx;
  U32 brp = CAN_CLOCK;                /* CAN module clock                    */

  CAN_get_ctrl(ctrl, &CANx);          /* Get address of CAN controller       */

  /* Determine which nominal time to use for requested baudrate and set
     appropriate bit timing                                                  */
  if (baudrate <= 500000)  {
    brp  = (brp / 16) / baudrate;
                                                                          
    /* Load the baudrate registers CANBIT and CANBRPE registers
       so that sample point is at about 70% bit time from bit start          */
    /* TSEG1 = 11, TSEG2 = 4, SJW = 4 => 1 CAN bit = 16 TQ, sample at 75%    */
    Wr(CANx + CAN_O_BIT , (3 << 12) | (10 << 8) | (3 << 6) | ((brp-1) & 0x3F));
    Wr(CANx + CAN_O_BRPE, (((brp-1) >> 6) & 0x0F));
  }  else if (baudrate <= 1000000)  {
    brp  = (brp / 8 ) / baudrate;

    /* Load the baudrate registers CANBIT and CANBRPE registers
       so that sample point is at about 70% bit time from bit start          */
    /* TSEG1 = 4, TSEG2 = 3, SJW = 3 => 1 CAN bit = 8 TQ, sample at 62.5%    */
    Wr(CANx + CAN_O_BIT , (2 << 12) | (3 << 8) | (2 << 6) | ((brp-1) & 0x3F));
    Wr(CANx + CAN_O_BRPE, (((brp-1) >> 6) & 0x0F));
  }  else  {
    return CAN_BAUDRATE_ERROR;
  }  

  return CAN_OK;
}

CAN_ERROR CAN_hw_setup (U32 ctrl)  {
  switch (ctrl) {
    case 1: 
      #if USE_CAN_CTRL1 == 1
        SysCtlPeripheralEnable(SYSCTL_PERIPH_CAN0);         /* Enable CAN clk*/
        SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOD);        /* Enable PIO clk*/
        GPIOPinTypeCAN(GPIO_PORTD_BASE, (1<<0) | (1<<1));   /* Setup pins    */

        /* Set priority and enable interrupt                                 */
        HWREG(NVIC_PRI9)  |= (0xFEUL << 24);
        HWREG(NVIC_EN1)   |= 1 << (INT_CAN0 - 48);
      #endif
      break;
    case 2: 
      #if USE_CAN_CTRL2 == 1
        SysCtlPeripheralEnable(SYSCTL_PERIPH_CAN1);         /* Enable CAN clk*/
        SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOF);        /* Enable PIO clk*/
        GPIOPinTypeCAN(GPIO_PORTF_BASE, (1<<0) | (1<<1));   /* Setup pins    */

        /* Set priority and enable interrupt                                 */
        HWREG(NVIC_PRI10) |= (0xFDUL << 0);
        HWREG(NVIC_EN1)   |= 1 << (INT_CAN1 - 48);
      #endif
      break;
    case 3: 
      #if USE_CAN_CTRL3 == 1
        return CAN_UNEXIST_CTRL_ERROR;
      #endif
      break;
    default:
      return CAN_UNEXIST_CTRL_ERROR;
  }

  return CAN_OK;
}

CAN_ERROR CAN_hw_init (U32 ctrl, U32 baudrate)  {
  U32 i;
  U32 CANx;

  CAN_get_ctrl(ctrl, &CANx);          /* Get address of CAN controller       */

  /* Calculate SYS clk / CAN clk ratio used for software delay because of 
     hardware chip problems                                                  */
  clk_ratio = (U32)((SysCtlClockGet() / CAN_CLOCK) + 1);

  /* Enter init mode, enabled automatic retransmission                       */
  Wr(CANx + CAN_O_CTL, CAN_CTL_CCE | /*CAN_CTL_DAR |*/ CAN_CTL_INIT);

  if (CAN_hw_set_baudrate(ctrl, baudrate) != CAN_OK)    /* Set baudrate      */
    return CAN_BAUDRATE_ERROR;

  /* Initialize all objects as unused                                        */
  while (Rd(CANx + CAN_O_IF1CRQ) & CAN_IFCRQ_BUSY);     /* Wait while busy   */
  Wr(CANx + CAN_O_IF1CMSK, CAN_IFCMSK_WRNRD | CAN_IFCMSK_ARB | CAN_IFCMSK_CONTROL);
  Wr(CANx + CAN_O_IF1ARB2, 0);
  Wr(CANx + CAN_O_IF1MCTL, 0);
  for (i = 0; i < 32; i++) {
    while (Rd(CANx + CAN_O_IF1CRQ) & CAN_IFCRQ_BUSY);   /* Wait while busy   */
    Wr(CANx + CAN_O_IF1CRQ, i);
  }
  while (Rd(CANx + CAN_O_IF1CRQ) & CAN_IFCRQ_BUSY);     /* Wait while busy   */
  Wr(CANx + CAN_O_IF1CMSK, CAN_IFCMSK_NEWDAT | CAN_IFCMSK_CLRINTPND);
  for (i = 0; i < 32; i++) {
    while (Rd(CANx + CAN_O_IF1CRQ) & CAN_IFCRQ_BUSY);   /* Wait while busy   */
    Wr(CANx + CAN_O_IF1CRQ, i);
  }
  Rd(CANx + CAN_O_STS);               /* Acknowledge pending interrupts      */

  return CAN_OK;
}

CAN_ERROR CAN_hw_start (U32 ctrl)  {
  U32 CANx;

  CAN_get_ctrl(ctrl, &CANx);          /* Get address of CAN controller       */

  /* Enable interrrupt, exit init mode, enabled automatic retransmission     */
  Wr(CANx + CAN_O_CTL, /*CAN_CTL_DAR |*/ CAN_CTL_IE);

  return CAN_OK;
}

CAN_ERROR CAN_hw_tx_empty (U32 ctrl)  {
  U32 CANx;

  CAN_get_ctrl(ctrl, &CANx);            /* Get address ofo CAN controller     */

  if ((os_sem_wait (wr_sem[ctrl-1], 0) != OS_R_TMO)){ /* If semaphore is free*/
  if (!(Rd(CANx + CAN_O_IF1CRQ) & CAN_IFCRQ_BUSY))    /* Interface 0 is free */
                                                      /* for transmission    */
      return CAN_OK;
    else 
      os_sem_send(wr_sem[ctrl-1]);    /* Return a token back to semaphore    */
  }

  return CAN_TX_BUSY_ERROR;
}

CAN_ERROR CAN_hw_wr (U32 ctrl, CAN_msg *msg)  {
  U32 CANx;

  CAN_get_ctrl(ctrl, &CANx);            /* Get address of CAN controller     */

  /* Set flags for informations that will be changed                         */
  Wr(CANx + CAN_O_IF1CMSK,   CAN_IFCMSK_WRNRD   | 
                             CAN_IFCMSK_ARB     | 
                             CAN_IFCMSK_CONTROL |
                             CAN_IFCMSK_DATAA   |
                             CAN_IFCMSK_DATAB);

  /* Setup the identifier information                                        */
  if (msg->format == STANDARD_FORMAT)  {  /* Standard ID                     */
    Wr(CANx + CAN_O_IF1ARB1, 0);
    Wr(CANx + CAN_O_IF1ARB2, (U16) (msg->id << 2));
  }  else  {                              /* Extended ID                     */
    Wr(CANx + CAN_O_IF1ARB1, (U16) (msg->id));
    Wr(CANx + CAN_O_IF1ARB2, (U16)((msg->id) >> 16) | CAN_IFARB2_XTD);
  }

  /* Setup type information                                                  */
  if (msg->type == DATA_FRAME)  {         /* DATA FRAME                      */
    Wr(CANx + CAN_O_IF1ARB2, Rd(CANx + CAN_O_IF1ARB2) | CAN_IFARB2_DIR);
  }

  /* Setup data bytes                                                        */
  Wr(CANx + CAN_O_IF1DA1, ((U16) msg->data[1]<<8) | msg->data[0]);
  Wr(CANx + CAN_O_IF1DA2, ((U16) msg->data[3]<<8) | msg->data[2]);
  Wr(CANx + CAN_O_IF1DB1, ((U16) msg->data[5]<<8) | msg->data[4]);
  Wr(CANx + CAN_O_IF1DB2, ((U16) msg->data[7]<<8) | msg->data[6]);

  /* Setup length and message control bits                                   */
  Wr(CANx + CAN_O_IF1MCTL, CAN_IFMCTL_NEWDAT | 
                           CAN_IFMCTL_TXIE   |
                           CAN_IFMCTL_TXRQST |
                           CAN_IFMCTL_EOB    |
                           (msg->len & 0x000F));

  /* Set the message valid bit                                               */
  Wr(CANx + CAN_O_IF1ARB2, Rd(CANx + CAN_O_IF1ARB2) | CAN_IFARB2_MSGVAL);

  /* Update informations from interface registers                            */
  Wr(CANx + CAN_O_IF1CRQ,  msg->ch);

  return CAN_OK;
}

static void CAN_hw_rd (U32 ctrl, U32 ch, CAN_msg *msg)  {
  U32 CANx;
  U32 arb1, arb2;

  CAN_get_ctrl(ctrl, &CANx);            /* Get address of CAN controller     */

  /* Read the message contents to interface registers                        */
  Wr(CANx + CAN_O_IF2CMSK, CAN_IFCMSK_ARB       | 
                           CAN_IFCMSK_CONTROL   |
                           CAN_IFCMSK_CLRINTPND |
                           CAN_IFCMSK_DATAA     |
                           CAN_IFCMSK_DATAB);

  /* Request read to interface registers                                     */
  Wr(CANx + CAN_O_IF2CRQ, ch);

  arb1 = Rd(CANx + CAN_O_IF2ARB1);      /* Read ARB1 value                   */
  arb2 = Rd(CANx + CAN_O_IF2ARB2);      /* Read ARB2 value                   */

  /* Read identifier information                                             */
  if (!(arb2 & CAN_IFARB2_XTD)) {                       /* Standard ID       */
    msg->format = STANDARD_FORMAT;
    msg->id     = (arb2 >> 2) & 0x07FF;
  }  else  {                                            /* Extended ID       */
    msg->format = EXTENDED_FORMAT;
    msg->id     =  (((U32)(arb2) << 16) | 0x1FFF)
                  | ((U32)(arb1) & 0xFFFF);
  }

  /* Read type information                                                   */
  if (arb2 & CAN_IFARB2_DIR) {                              /* DATA   FRAME  */
    msg->type = REMOTE_FRAME;
  }  else  {                                                /* REMOTE FRAME  */
    msg->type =   DATA_FRAME;
  }

  msg->ch      = ch;                    /* Reception channel                 */

  /* Read length (number of received bytes)                                  */
  msg->len     = Rd(CANx + CAN_O_IF2MCTL) & 0x0F;

  /* Read data bytes                                                         */
  msg->data[0] = (U8) Rd(CANx + CAN_O_IF2DA1);
  msg->data[1] = (U8)(Rd(CANx + CAN_O_IF2DA1) >> 8);
  msg->data[2] = (U8) Rd(CANx + CAN_O_IF2DA2);
  msg->data[3] = (U8)(Rd(CANx + CAN_O_IF2DA2) >> 8);
  msg->data[4] = (U8) Rd(CANx + CAN_O_IF2DB1);
  msg->data[5] = (U8)(Rd(CANx + CAN_O_IF2DB1) >> 8);
  msg->data[6] = (U8) Rd(CANx + CAN_O_IF2DB2);
  msg->data[7] = (U8)(Rd(CANx + CAN_O_IF2DB2) >> 8);
}

CAN_ERROR CAN_hw_set (U32 ctrl, CAN_msg *msg)  {
  U32 CANx;

  CAN_get_ctrl(ctrl, &CANx);            /* Get address of CAN controller     */

  /* Set flags for informations that will be changed                         */
  Wr(CANx + CAN_O_IF1CMSK,  CAN_IFCMSK_WRNRD   | 
                            CAN_IFCMSK_ARB     | 
                            CAN_IFCMSK_CONTROL |
                            CAN_IFCMSK_DATAA   |
                            CAN_IFCMSK_DATAB);

  /* Setup the identifier information                                        */
  if (msg->format == STANDARD_FORMAT)  {  /* Standard ID                     */
    Wr(CANx + CAN_O_IF1ARB1, 0);
    Wr(CANx + CAN_O_IF1ARB2, (U16) (msg->id << 2));
  }  else  {                              /* Extended ID                     */
    Wr(CANx + CAN_O_IF1ARB1, (U16) (msg->id));
    Wr(CANx + CAN_O_IF1ARB2, (U16)((msg->id) >> 16) | CAN_IFARB2_XTD);
  }

  /* Setup type information                                                  */
  if (msg->type == DATA_FRAME)  {         /* DATA FRAME                      */
    Wr(CANx + CAN_O_IF1ARB2, Rd(CANx + CAN_O_IF1ARB2) | CAN_IFARB2_DIR);
  }

  /* Setup data bytes                                                        */
  Wr(CANx + CAN_O_IF1DA1, ((U16) msg->data[1]<<8) | msg->data[0]);
  Wr(CANx + CAN_O_IF1DA2, ((U16) msg->data[3]<<8) | msg->data[2]);
  Wr(CANx + CAN_O_IF1DB1, ((U16) msg->data[5]<<8) | msg->data[4]);
  Wr(CANx + CAN_O_IF1DB2, ((U16) msg->data[7]<<8) | msg->data[6]);

  /* Setup length and message control bits                                   */
  Wr(CANx + CAN_O_IF1MCTL, CAN_IFMCTL_NEWDAT | 
                           CAN_IFMCTL_RMTEN  |
                           CAN_IFMCTL_EOB    |
                           (msg->len & 0x000F));

  /* Set the message valid bit                                               */
  Wr(CANx + CAN_O_IF1ARB2, Rd(CANx + CAN_O_IF1ARB2) | CAN_IFARB2_MSGVAL);

  /* Update informations from interface registers                            */
  Wr(CANx + CAN_O_IF1CRQ, msg->ch);

  return CAN_OK;
}

CAN_ERROR CAN_hw_rx_object (U32 ctrl, U32 ch, U32 id, U32 object_para)  {
  U32 ofs;
  U32 CANx;

  CAN_get_ctrl(ctrl, &CANx);            /* Get address of CAN controller     */

  /* Wait for the first free interface register                              */
  do  {
    if (!(Rd(CANx + CAN_O_IF1CRQ) & CAN_IFCRQ_BUSY))  {
      ofs = 0;
      break;
    }  else if (!(Rd(CANx + CAN_O_IF2CRQ) & CAN_IFCRQ_BUSY))  {
      ofs = (CAN_O_IF2CRQ - CAN_O_IF1CRQ);
      break;
    }
  }  while (1);

  /* Set flags for informations that will be changed                         */
  Wr(CANx + CAN_O_IF1CMSK + ofs,  CAN_IFCMSK_WRNRD   | 
                                  CAN_IFCMSK_MASK    |
                                  CAN_IFCMSK_ARB     | 
                                  CAN_IFCMSK_CONTROL |
                                  CAN_IFCMSK_DATAA   |
                                  CAN_IFCMSK_DATAB);

  /* Setup the identifier information                                        */
  if ((object_para & FORMAT_TYPE) == STANDARD_TYPE)  { /* Standard ID        */
    Wr(CANx + CAN_O_IF1MSK1 + ofs, 0);
    Wr(CANx + CAN_O_IF1MSK2 + ofs, (U16)(0x7FF << 2));

    Wr(CANx + CAN_O_IF1ARB1 + ofs, 0);
    Wr(CANx + CAN_O_IF1ARB2 + ofs, CAN_IFARB2_MSGVAL | (U16)(id << 2));
  }  else  {                              /* Extended ID                     */
    Wr(CANx + CAN_O_IF1MSK1 + ofs, (U16)(0xFFFF));
    Wr(CANx + CAN_O_IF1MSK2 + ofs, CAN_IFMSK2_MXTD | (U16)(0x1FFF));

    Wr(CANx + CAN_O_IF1ARB1 + ofs, (U16)(id));
    Wr(CANx + CAN_O_IF1ARB2 + ofs, CAN_IFARB2_MSGVAL | CAN_IFARB2_XTD | (U16)(id >> 16));
  }

  /* Setup length and message control bits                                   */
  Wr(CANx + CAN_O_IF1MCTL + ofs,  CAN_IFMCTL_UMASK  | 
                                  CAN_IFMCTL_RXIE   |
                                  CAN_IFMCTL_EOB    );

  /* Setup data bytes                                                        */
  Wr(CANx + CAN_O_IF1DA1 + ofs, 0);
  Wr(CANx + CAN_O_IF1DA2 + ofs, 0);
  Wr(CANx + CAN_O_IF1DB1 + ofs, 0);
  Wr(CANx + CAN_O_IF1DB2 + ofs, 0);

  /* Update informations from interface registers                            */
  Wr(CANx + CAN_O_IF1CRQ + ofs, ch);

  return CAN_OK;
}
